--- a/Basic_HTML_and_CSS/Basic_CSS_1.css
+++ b/Basic_HTML_and_CSS/Basic_CSS_1.css
@@ -1,3 +1,25 @@
-p {color: green; text-align: right;}
+p {color: green; text-align: right; font-style: italic}
 h1 {color: rgb(0, 0, 245);}
 footer {color:#7FFFD4; text-align: center;}
+
+.font_1 {
+color: yellow;
+text-decoration: underline;
+font-size: small;		
+}
+
+table, td, th {
+	border: 1px solid black;
+}
+
+#table-ol{
+	border-collapse: separate;
+}
+
+#table-ul{
+	border-collapse: collapse;
+}
+
+ol {color: purple; font-weight: bold;}
+
+ul {color: pink; text-decoration: underline;}
