--- a/Project/CSS/animations.css
+++ b/Project/CSS/animations.css
@@ -55,10 +55,23 @@
         height: 169px;
     }
 
+    .photo-container-2 {
+        text-align: center;
+        margin: 15px auto;
+        width: 308px;
+        height: 369px;
+    }
+
     .photo-container img {
         max-width: 100%;
         width: 300px;
         height: 169px;
+    }
+
+    .photo-container-2 img {
+        max-width: 100%;
+        width: 308px;
+        height: 369px;
     }
 
     .photo-overlay {
