--- a/Project/CSS/shared.css
+++ b/Project/CSS/shared.css
@@ -170,7 +170,7 @@ section {
 }
 
 #Locations {
-	background: url(../Images/Great\ Hall.png) no-repeat 50% 50%;
+	background: url(../Images/Great_Hall.png) no-repeat 50% 50%;
 	background-attachment: fixed;
 	-webkit-background-size: 100vw 100vh;
 	-moz-background-size: 100vw 100vh;
@@ -185,7 +185,7 @@ section {
 }
 
 #Leaders {
-	background: url(../Images/Great\ Hall.png) no-repeat 50% 50%;
+	background: url(../Images/Great_Hall.png) no-repeat 50% 50%;
 	background-attachment: fixed;
 	-webkit-background-size: 100vw 100vh;
 	-moz-background-size: 100vw 100vh;
@@ -200,7 +200,7 @@ section {
 }
 
 #Application-Desk {
-	background: url(../Images/Magic\ Forest.png) no-repeat 50% 50%;
+	background: url(../Images/Magic_Forest.png) no-repeat 50% 50%;
 	background-attachment: fixed;
 	-webkit-background-size: 100vw 100vh;
 	-moz-background-size: 100vw 100vh;
